# bee

./: AUTHORS  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  LICENSE  Makefile  README.CentOS  README.FreeBSD  README.MacOSX  README.md  TODO  VERSION  cmake_install.cmake  install_manifest.txt
cmake/: ._BuildSham.cmake  BuildLibEIO.cmake  BuildLibEV.cmake  BuildLibHTTP.cmake  BuildSham.cmake  arch.cmake  compiler.cmake  luajit.cmake  luatest.cpp  package.cmake  rpm.cmake  utils.cmake
debian/: ._bee.README.Debian  ._beetar.pod  README.Debian  bee-common.cron.hourly  bee-common.dirs  bee-common.install  bee-common.logrotate  bee-common.manpages  bee-common.postinst  bee-common.postrm  bee-dev.install  bee.README.Debian  bee.dirs  bee.install  bee.lintian-overrides  bee.manpages  bee_instance.pod  beetar.pod  changelog  control  copyright  rules  watch
debian/scripts/: bee_instance  bee_logrotate  bee_snapshot_rotate
debian/source/: lintian-overrides
doc/: Makefile  cmake_install.cmake
doc/man/: CMakeLists.txt  Makefile  bee.1  bee.pod  cmake_install.cmake
doc/sphinx/: conf.py  faq.rst  getting_started.rst  intro.rst
doc/www/: pelicanconf.py
extra/: CMakeLists.txt  Makefile  bee.rb  bin2c  cmake_install.cmake  org.bee.in  schema_erase.lua  schema_fill.lua  static.py  txt2c
extra/dmg/: DESCRIPTION.rtf  LICENSE.rtf  README.rtf  postflight.in
extra/rpm/: bee-scl.rpm.spec  bee.rpm.spec  bee.rpm.spec.in
src/: CMakeLists.txt  Makefile  bee  cfg.cc  cfg.h  cmake_install.cmake  coeio.cc  coeio.h  coeio_file.h  coio.h  coio_buf.h  coro.cc  coro.h  cpu_feature.h  crc32.h  errinj.h  evio.h  exception.h  ffisyms.cc  fiber.cc  fiber.h  fio.h  fiob.h  iobuf.h  ipc.h  main.cc  main.h  memory.h  object.h  pickle.h  random.h  say.cc  say.h  scoped_guard.h  scramble.h  sio.h  stat.h  trace.c  trigger.h  tt_pthread.h  (+3 more)
src/db/: CMakeLists.txt  Makefile  alter.cc  alter.h  authentication.cc  authentication.h  bootstrap.h  cluster.cc  cluster.h  cmake_install.cmake  db.cc  db.h  engine.h  errcode.h  error.h  index.h  iproto.cc  iproto.h  iproto_constants.h  iproto_port.h  key_def.cc  key_def.h  memtx_bitset.cc  memtx_bitset.h  memtx_engine.cc  memtx_engine.h  memtx_hash.cc  memtx_hash.h  memtx_rtree.h  memtx_tree.h  port.h  recovery.cc  recovery.h  replica.cc  replica.h  replication.cc  replication.h  request.h  schema.cc  schema.h  (+21 more)
src/db/lua/: call.cc  call.h  error.cc  error.h  index.cc  index.h  info.cc  info.h  load_cfg.lua  load_cfg.lua.c  schema.lua  schema.lua.c  session.cc  session.h  session.lua  session.lua.c  slab.cc  slab.h  snapshot_daemon.lua  snapshot_daemon.lua.c  space.cc  space.h  stat.cc  stat.h  tuple.cc  tuple.h  tuple.lua  tuple.lua.c
src/lib/: Makefile  cmake_install.cmake
src/lib/bit/: Makefile  bit.h  cmake_install.cmake  int96.h
src/lib/bitset/: Makefile  bitset.h  cmake_install.cmake  expr.h  index.h  iterator.h  page.h
src/lib/msgpuck/: Doxyfile
src/lib/salad/: Makefile  cmake_install.cmake  fifo.h  guava.h  rlist.h  rope.h  rtree.h
src/lib/small/: Makefile  cmake_install.cmake  lf_lifo.h  lifo.h  matras.h  mempool.h  quota.h  region.h  slab_arena.h  slab_cache.h  small.h
src/lua/: bsdsocket.cc  bsdsocket.h  bsdsocket.lua  bsdsocket.lua.c  console.lua  console.lua.c  digest.h  digest.lua.c  errno.c  errno.h  errno.lua.c  fiber.cc  fiber.h  fiber.lua.c  fio.cc  fio.h  fio.lua.c  help.lua  help.lua.c  help_en_US.lua  help_en_US.lua.c  init.cc  init.h  init.lua  init.lua.c  ipc.cc  ipc.h  log.lua.c  mime_types.lua  msgpack.h  msgpackffi.lua  msgpackffi.lua.c  net_db.lua  net_db.lua.c  pickle.cc  pickle.h  tap.lua.c  trigger.cc  trigger.h  uri.lua.c  (+3 more)
src/trivia/: Makefile  bee.h  bee_footer.h  bee_header.h  cmake_install.cmake  config.h  config.h.cmake  util.h
test/: Makefile  cmake_install.cmake
test-run/: README.md  test-run.py
test-run/lib/: admin_connection.py  app_server.py  bee_connection.py  bee_server.py  db_connection.py  parallel.py  sql.g  sql_ast.py  test_suite.py  unittest_server.py  utils.py
test/app/: Makefile  boolean.test.lua  cfg.result  cfg.test.lua  cmake_install.cmake  console.test.lua  float_value.result  float_value.test.lua  info.test.lua  init_script.result  init_script.test.lua  json.test.lua  logger.test.lua  minimal.result  minimal.test.lua  module_api.c  module_api.skipcond  module_api.test.lua  msgpack.test.lua  msgpackffi.test.lua  pcall.result  pcall.test.lua  session.test.lua  snapshot.test.lua  tap.test.lua  trigger_atexit.test.lua  uri.test.lua  yaml.test.lua
test/big/: big.lua  bitset.result  bitset.test.lua  hash.result  hash.test.lua  hash_multipart.result  hash_multipart.test.lua  iterator.result  iterator.test.lua  lua.result  lua.test.lua  sql.result  sql.test.py  suite.ini  tree_pk.result  tree_pk.test.lua  tree_pk_multipart.result  tree_pk_multipart.test.lua  tree_variants.result  tree_variants.test.lua
test/db/: access.result  access.test.lua  access_bin.result  access_bin.test.lua  access_misc.result  access_misc.test.lua  access_sysview.result  access_sysview.test.lua  admin.result  admin.test.lua  alter.result  alter.test.lua  alter_limits.result  alter_limits.test.lua  args.result  args.test.py  bad_trigger.result  bad_trigger.test.py  bootstrap.result  bootstrap.test.py  bsdsocket.result  bsdsocket.skipcond  bsdsocket.test.lua  call.result  call.test.py  cfg.result  cfg.test.lua  cmdline.result  cmdline.test.lua  configuration.result  crossjoin.result  crossjoin.test.lua  db.lua  errinj.result  errinj.test.lua  errinj_index.result  errinj_index.test.lua  fiber.result  fiber.test.lua  finalizers.test.py  (+62 more)
test/long_run/: db.lua  suite.ini  (+6 more)
(+268 files in other folders)
